--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@types/proj4": "^2.5.6",
     "leaflet": "^1.9.3",
+    "leaflet-control-geocoder": "^2.4.0",
     "proj4": "^2.17.0"
   },
   "devDependencies": {
