--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/proj4": "^2.5.6",
     "leaflet": "^1.9.3",
     "leaflet-control-geocoder": "^2.4.0",
+    "lit": "^3.3.0",
     "proj4": "^2.17.0"
   },
   "devDependencies": {
