--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --ext .ts --config eslint.config.js",
+    "format": "prettier --write .",
+    "type-check": "tsc --noEmit"
   },
   "keywords": [
     "web-component",
@@ -27,9 +30,18 @@
     "proj4": "^2.17.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.30.1",
     "@types/leaflet": "^1.9.0",
     "@types/node": "^20.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
+    "eslint": "^9.30.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
+    "globals": "^16.3.0",
+    "prettier": "^3.6.2",
     "typescript": "^5.0.0",
+    "typescript-eslint": "^8.35.1",
     "vite": "^4.0.0"
   }
 }
