--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lhc-map-overlay",
+  "name": "cern-map-overlay",
   "version": "0.0.0",
-  "description": "A web component for LHC map overlay built with Vite",
+  "description": "A web component for CERN map overlay built with Vite",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -15,6 +15,7 @@
     "web-component",
     "leaflet",
     "vite",
+    "CERN",
     "LHC",
     "map",
     "overlay"
