--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   "files": [
     "dist"
   ],
+  "main": "dist/cern-map-overlay.iife.js",
+  "module": "dist/cern-map-overlay.es.js",
+  "unpkg": "dist/cern-map-overlay.iife.js",
   "dependencies": {
     "@types/proj4": "^2.5.6",
     "leaflet": "^1.9.3",
