--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
   "name": "cern-map-overlay",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "A web component for CERN map overlay built with Vite",
+  "author": "Kaj Wik Siebert <kaj@k-si.com>",
+  "license": "MIT",
+  "homepage": "https://github.com/kws/cern-map-overlay",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kws/cern-map-overlay.git"
+  },
   "type": "module",
   "scripts": {
     "dev": "vite",
