--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "preview": "vite preview",
     "lint": "eslint . --ext .ts --config eslint.config.js",
     "format": "prettier --write .",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "test": "vitest"
   },
   "keywords": [
     "web-component",
@@ -50,9 +51,11 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
     "globals": "^16.3.0",
+    "jsdom": "^26.1.0",
     "prettier": "^3.6.2",
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.35.1",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vitest": "^3.2.4"
   }
 }
